Improve table style in Slack